web/book/tests/documentation/snapshots/documentation__book__how-do-i__relation-literals__array-literals__3.snap
---
source: web/book/tests/documentation/book.rs
expression: "from_text format:json \"\"\"\n[\n    {\"a\": 1, \"m\": \"5\"},\n    {\"a\": 4, \"n\": \"6\"}\n]\n\"\"\"\n"
---
WITH table_0 AS (
  SELECT
    1 AS a,
    '5' AS m
  UNION
  ALL
  SELECT
    4 AS a,
    NULL AS m
)
SELECT
  a,
  m
FROM
  table_0

